--- a/pMEC1138.ipynb
+++ b/pMEC1138.ipynb
@@ -91,13 +91,6 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "@_rc cSEGUID_qSJ95NM815X60yBy4l6iI69a_Dw_2015-07-15T11:55:09.522091\n"
-     ]
-    },
-    {
      "data": {
       "text/html": [
        "<font face=monospace><a href='pMEC1135.gb' target='_blank'>pMEC1135.gb</a></font><br>"
@@ -110,9 +103,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "14760\n",
-      "KsItUghJ26gWmTx7JAcZTSjEXas\n",
-      "pYPK0-TEF1-SsXR_N272D-TDH3-SsXDH-PGI1-XK-FBA1-ScTAL1-PDC1 pYPK0_C4 cSEGUID_KsItUghJ26gWmTx7JAcZTSjEXas_2015-07-16T10:00:11.116996\n"
+      "14760\n"
      ]
     }
    ],
@@ -133,7 +124,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "@_rc cSEGUID_qSJ95NM815X60yBy4l6iI69a_Dw_2015-07-15T11:55:09.522091\n",
       "14484\n"
      ]
     },
@@ -150,8 +140,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6E0AGs78NqyqjtuAWRWhkIGlLnI\n",
-      "pYPK0-PDC1-ScTKL1-RPS19b-ScRPE1-RPS19a-ScRKI1-TPI1-CiGXF1-ScENO2 cSEGUID_6E0AGs78NqyqjtuAWRWhkIGlLnI_2015-07-15T13:47:22.919084\n"
+      "6E0AGs78NqyqjtuAWRWhkIGlLnI\n"
      ]
     }
    ],
@@ -208,13 +197,6 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "@_rc cSEGUID_qSJ95NM815X60yBy4l6iI69a_Dw_2015-07-15T11:55:09.522091\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
        "qSJ95NM815X60yBy4l6iI69a_Dw"
@@ -226,7 +208,6 @@
     }
    ],
    "source": [
-    "print(pYPK0.description)\n",
     "pYPK0.cseguid()"
    ]
   },
@@ -488,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -522,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -531,6 +512,30 @@
    "outputs": [],
    "source": [
     "reloaded =read(\"pMEC1138.gb\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tWtIxyv-o0uXDkfaXxdPoFbkWco"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reloaded.cseguid()"
    ]
   },
   {
@@ -545,34 +550,10 @@
     {
      "data": {
       "text/plain": [
-       "tWtIxyv-o0uXDkfaXxdPoFbkWco"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "reloaded.cseguid()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
        "22594"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
