--- a/pMEC1139.ipynb
+++ b/pMEC1139.ipynb
@@ -91,22 +91,9 @@
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/bjorn/python_packages/pydna/pydna/dseqrecord.py:197: UserWarning: name property 468_pCAPs_release_fw truncated to 16 chars 468_pCAPs_releas\n",
-      "  _warn(\"name property {} truncated to 16 chars {}\".format(self.name, short_name))\n",
-      "/home/bjorn/python_packages/pydna/pydna/dseqrecord.py:197: UserWarning: name property 467_pCAPs_release_re truncated to 16 chars 467_pCAPs_releas\n",
-      "  _warn(\"name property {} truncated to 16 chars {}\".format(self.name, short_name))\n",
-      "/home/bjorn/python_packages/pydna/pydna/dseqrecord.py:197: UserWarning: name property 778_tp_Eco32I_rev truncated to 16 chars 778_tp_Eco32I_re\n",
-      "  _warn(\"name property {} truncated to 16 chars {}\".format(self.name, short_name))\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "@_rc cSEGUID_qSJ95NM815X60yBy4l6iI69a_Dw_2015-07-15T11:55:09.522091\n",
       "14760\n"
      ]
     },
@@ -114,9 +101,6 @@
      "data": {
       "text/html": [
        "<font face=monospace><a href='pMEC1136.gb' target='_blank'>pMEC1136.gb</a></font><br>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
       ]
      },
      "metadata": {},
@@ -140,29 +124,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "@_rc cSEGUID_qSJ95NM815X60yBy4l6iI69a_Dw_2015-07-15T11:55:09.522091\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/bjorn/python_packages/pydna/pydna/dseqrecord.py:197: UserWarning: name property 621_ScTPI1tpr_PacI truncated to 16 chars 621_ScTPI1tpr_Pa\n",
-      "  _warn(\"name property {} truncated to 16 chars {}\".format(self.name, short_name))\n",
-      "/home/bjorn/python_packages/pydna/pydna/dseqrecord.py:197: UserWarning: name property 625_ScPDC1tpr_PacI truncated to 16 chars 625_ScPDC1tpr_Pa\n",
-      "  _warn(\"name property {} truncated to 16 chars {}\".format(self.name, short_name))\n",
-      "/home/bjorn/python_packages/pydna/pydna/dseqrecord.py:197: UserWarning: name property 647_ScRPS19btpr_PacI truncated to 16 chars 647_ScRPS19btpr_\n",
-      "  _warn(\"name property {} truncated to 16 chars {}\".format(self.name, short_name))\n",
-      "/home/bjorn/python_packages/pydna/pydna/dseqrecord.py:197: UserWarning: name property 651_ScRPS19atpr_PacI truncated to 16 chars 651_ScRPS19atpr_\n",
-      "  _warn(\"name property {} truncated to 16 chars {}\".format(self.name, short_name))\n",
-      "/home/bjorn/python_packages/pydna/pydna/dseqrecord.py:197: UserWarning: name property 660_ScENO2tpr_PacI truncated to 16 chars 660_ScENO2tpr_Pa\n",
-      "  _warn(\"name property {} truncated to 16 chars {}\".format(self.name, short_name))\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "14484\n"
      ]
     },
@@ -170,9 +131,6 @@
      "data": {
       "text/html": [
        "<font face=monospace><a href='pMEC1137.gb' target='_blank'>pMEC1137.gb</a></font><br>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
       ]
      },
      "metadata": {},
@@ -182,8 +140,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6E0AGs78NqyqjtuAWRWhkIGlLnI\n",
-      "pYPK0-PDC1-ScTKL1-RPS19b-ScRPE1-RPS19a-ScRKI1-TPI1-CiGXF1-ScENO2 cSEGUID_6E0AGs78NqyqjtuAWRWhkIGlLnI_2015-07-15T13:47:22.919084\n"
+      "6E0AGs78NqyqjtuAWRWhkIGlLnI\n"
      ]
     }
    ],
@@ -504,7 +461,7 @@
     {
      "data": {
       "text/plain": [
-       "cSEGUID_rjjimx-cVzquS3V5BPVMOWPSwAI_2017-01-11T17:48:22.655524"
+       "cSEGUID_rjjimx-cVzquS3V5BPVMOWPSwAI"
       ]
      },
      "execution_count": 19,
@@ -520,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -531,9 +488,6 @@
      "data": {
       "text/html": [
        "<font face=monospace><a href='pMEC1139.gb' target='_blank'>pMEC1139.gb</a></font><br>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
       ]
      },
      "metadata": {},
@@ -557,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -567,6 +521,30 @@
    "source": [
     "from pydna.all import *\n",
     "reloaded =read(\"pMEC1139.gb\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "rjjimx-cVzquS3V5BPVMOWPSwAI"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reloaded.cseguid()"
    ]
   },
   {
@@ -581,34 +559,10 @@
     {
      "data": {
       "text/plain": [
-       "rjjimx-cVzquS3V5BPVMOWPSwAI"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "reloaded.cseguid()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
        "22594"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
