--- a/pYPK5.ipynb
+++ b/pYPK5.ipynb
@@ -34,12 +34,34 @@
    "source": [
     "from pydna.all import *\n",
     "\n",
-    "pYPK0 =read(\"pYPK0.gb\")\n",
+    "pYPK0 = read(\"pYPK0.gb\")\n",
     "\n",
     "githubuser=\"BjornFJohansson\"\n",
     "gistid = \"c5424b7ebbf553c52053\"\n",
     "x=download_text('https://gist.githubusercontent.com/{user}/{gistid}/raw'.format(user=githubuser, gistid=gistid))\n",
     "pAG32 =read(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ttCV-qk-4UzU8BkVhaswwqdfGlg"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pAG32.cseguid()"
    ]
   },
   {
@@ -54,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -71,20 +93,58 @@
     "taactgtcagaccaagtttac\n",
     "\n",
     ">534_pSU0_2u_rev (27-mer)\n",
-    "ttatcgatgataagctgtcaaagatga''')\n",
-    "\n",
-    "hygmarker =pcr(p477, p531, pAG32)\n",
-    "\n",
-    "two_micron =pcr(p534, p535, pYPK0)\n",
-    "\n",
-    "from Bio.Restriction import StuI\n",
-    "\n",
+    "ttatcgatgataagctgtcaaagatga''')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "hygmarker = pcr(p477, p531, pAG32)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "two_micron =pcr(p534, p535, pYPK0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from Bio.Restriction import StuI"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
     "vect, stuffer = pYPK0.cut(StuI)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -97,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -118,7 +178,7 @@
        "Linear products..................: [7804] [6784] [6332] [6218] [6016] [5902] [5096] [3307] [2539] [2425] [1505] [485] [33]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -196,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -206,21 +266,21 @@
     {
      "data": {
       "text/plain": [
-       " -|1619bp_PCR_prod|1505\n",
+       " -|1619bp_PCR_prod|66\n",
        "|                  \\/\n",
        "|                  /\\\n",
-       "|                  1505|pYKP0|41\n",
-       "|                             \\/\n",
-       "|                             /\\\n",
-       "|                             41|1721bp_PCR_pr_rc|33\n",
-       "|                                                 \\/\n",
-       "|                                                 /\\\n",
-       "|                                                 33-\n",
-       "|                                                    |\n",
-       " ----------------------------------------------------"
+       "|                  66|pYKP0|41\n",
+       "|                           \\/\n",
+       "|                           /\\\n",
+       "|                           41|1721bp_PCR_pr_rc|33\n",
+       "|                                               \\/\n",
+       "|                                               /\\\n",
+       "|                                               33-\n",
+       "|                                                  |\n",
+       " --------------------------------------------------"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -244,9 +304,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -255,7 +317,7 @@
        "bYXaKaxDTMFN5_B-QWoDqATVAb0"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -279,7 +341,7 @@
        "cSEGUID_bYXaKaxDTMFN5_B-QWoDqATVAb0"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -324,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -337,7 +399,7 @@
        "cSEGUID_bYXaKaxDTMFN5_B-QWoDqATVAb0"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
