--- a/pYPK5.ipynb
+++ b/pYPK5.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -79,7 +79,7 @@
        "ttCV-qk-4UzU8BkVhaswwqdfGlg"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -163,9 +163,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 22,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true
    },
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -184,12 +184,12 @@
    },
    "outputs": [],
    "source": [
-    "asm=Assembly([hygmarker, two_micron, vect])"
+    "asm=Assembly([hygmarker, two_micron, vect], max_nodes=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -207,10 +207,10 @@
        "Nodes in graph(incl. 5' & 3')....: 8\n",
        "Only terminal overlaps...........: No\n",
        "Circular products................: [7219] [6299]\n",
-       "Linear products..................: [7804] [6784] [6332] [6218] [6016] [5902] [5096] [3307] [2539] [2425] [1505] [485] [33]"
+       "Linear products..................: "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -234,7 +234,7 @@
        "(Contig(o7219), Contig(o6299))"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,9 +251,9 @@
     "editable": true
    },
    "source": [
-    "The larger recombination product x 7219 contains the \n",
+    "The larger recombination product x (7219 bp) contains the \n",
     "pYPK0 vector two times in a row\n",
-    "the product we want is the y sequence 6299bp\n",
+    "the product we want is the y sequence (6299bp) see below.\n",
     "\n",
     "    x:\n",
     "     -|1619bp_PCR_prod|1505\n",
@@ -290,42 +290,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       " -|1619bp_PCR_prod|66\n",
-       "|                  \\/\n",
-       "|                  /\\\n",
-       "|                  66|pYKP0|41\n",
-       "|                           \\/\n",
-       "|                           /\\\n",
-       "|                           41|1721bp_PCR_pr_rc|33\n",
-       "|                                               \\/\n",
-       "|                                               /\\\n",
-       "|                                               33-\n",
-       "|                                                  |\n",
-       " --------------------------------------------------"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "y.figure()"
+    "#y.figure()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 27,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -338,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -351,7 +329,7 @@
        "bYXaKaxDTMFN5_B-QWoDqATVAb0"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -375,7 +353,7 @@
        "cSEGUID_bYXaKaxDTMFN5_B-QWoDqATVAb0"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -387,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -409,18 +387,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
-    "[DOWNLOAD](pYPK5.gb)"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -433,7 +401,7 @@
        "cSEGUID_bYXaKaxDTMFN5_B-QWoDqATVAb0"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
