--- a/notebooks/pMEC1138.ipynb
+++ b/notebooks/pMEC1138.ipynb
@@ -93,13 +93,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "14760\n"
-     ]
     }
    ],
    "source": [
@@ -116,13 +109,6 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "14484\n"
-     ]
-    },
-    {
      "data": {
       "text/html": [
        "<font face=monospace><a href='pMEC1137.gb' target='_blank'>pMEC1137.gb</a></font><br>"
@@ -130,13 +116,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "6E0AGs78NqyqjtuAWRWhkIGlLnI\n"
-     ]
     }
    ],
    "source": [
@@ -443,27 +422,26 @@
   {
    "cell_type": "code",
    "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import textwrap"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "cSEGUID_tWtIxyv-o0uXDkfaXxdPoFbkWco"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "pw.name = \"pMEC1138\"\n",
-    "pw.description=\"pYPK0_TEF1_XR_N272D_TPI1_XDH_PDC1_XK_FBA1_TAL1_PDC1tpPDC1_ScTKL1_RPS19b_ScRPE1_RPS19a_ScRKI1_TPI1_CiGXF1_ENO2 (alternative name pYPK0_8)\"\n",
-    "pw.stamp()"
+    "pw.description=\"pYPK0_TEF1_XR_N272D_TPI1_XDH_PDC1_XK_FBA1_TAL1_PDC1_ScTKL1_RPS19b_ScRPE1_RPS19a_ScRKI1_TPI1_CiGXF1_ENO2 (alternative name pYPK0_8)\"\n",
+    "pw.stamp()\n",
+    "pw.description = \"\\n\".join( textwrap.wrap( pw.description, 40) )"
    ]
   },
   {
@@ -487,77 +465,6 @@
    ],
    "source": [
     "pw.write(\"pMEC1138.gb\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
-    "### [DOWNLOAD](pMEC1138.gb)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "reloaded =read(\"pMEC1138.gb\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tWtIxyv-o0uXDkfaXxdPoFbkWco"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "reloaded.cseguid()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "22594"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(reloaded)"
    ]
   }
  ],
