--- a/notebooks/pMEC1139.ipynb
+++ b/notebooks/pMEC1139.ipynb
@@ -77,13 +77,6 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "14760\n"
-     ]
-    },
-    {
      "data": {
       "text/html": [
        "<font face=monospace><a href='pMEC1136.gb' target='_blank'>pMEC1136.gb</a></font><br>"
@@ -94,6 +87,7 @@
     }
    ],
    "source": [
+    "# NBVAL_IGNORE_OUTPUT\n",
     "from ipynb.fs.full.pMEC1136 import cas1, cas2, cas3, p4, p409"
    ]
   },
@@ -107,13 +101,6 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "14484\n"
-     ]
-    },
-    {
      "data": {
       "text/html": [
        "<font face=monospace><a href='pMEC1137.gb' target='_blank'>pMEC1137.gb</a></font><br>"
@@ -121,16 +108,10 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "6E0AGs78NqyqjtuAWRWhkIGlLnI\n"
-     ]
     }
    ],
    "source": [
+    "# NBVAL_IGNORE_OUTPUT\n",
     "from ipynb.fs.full.pMEC1137 import p1 as p5, cas2 as cas6, cas3 as cas7, cas4 as cas8, p625, p647, p413"
    ]
   },
@@ -183,16 +164,9 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "cSEGUID_qSJ95NM815X60yBy4l6iI69a_Dw_2018-05-15T07:40:31.009387\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "qSJ95NM815X60yBy4l6iI69a_Dw"
+       "'cSEGUID_qSJ95NM815X60yBy4l6iI69a_Dw_2018-05-15T07:40:31.009387'"
       ]
      },
      "execution_count": 7,
@@ -201,13 +175,36 @@
     }
    ],
    "source": [
-    "print(pYPK0.description)\n",
-    "pYPK0.cseguid()"
+    "pYPK0.description"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "qSJ95NM815X60yBy4l6iI69a_Dw"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pYPK0.cseguid()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -220,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -233,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +239,7 @@
        "(Dseqrecord(-5681), Dseqrecord(-81))"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -274,7 +271,7 @@
        " Amplicon(2906))"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -298,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -315,7 +312,7 @@
        "algorithm..: common_sub_strings"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -326,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -339,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -381,7 +378,7 @@
        " --------------------------------------------------------------------------------------------------------------------------------------------------------------------------"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -392,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -401,30 +398,6 @@
    "outputs": [],
    "source": [
     "pw = candidate.synced(pYPK0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "22594"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(pw)"
    ]
   },
   {
@@ -439,7 +412,7 @@
     {
      "data": {
       "text/plain": [
-       "rjjimx-cVzquS3V5BPVMOWPSwAI"
+       "22594"
       ]
      },
      "execution_count": 18,
@@ -448,7 +421,7 @@
     }
    ],
    "source": [
-    "pw.cseguid()"
+    "len(pw)"
    ]
   },
   {
@@ -463,7 +436,7 @@
     {
      "data": {
       "text/plain": [
-       "cSEGUID_rjjimx-cVzquS3V5BPVMOWPSwAI"
+       "rjjimx-cVzquS3V5BPVMOWPSwAI"
       ]
      },
      "execution_count": 19,
@@ -472,9 +445,7 @@
     }
    ],
    "source": [
-    "pw.name = \"pMEC1138\"\n",
-    "pw.description=\"pYPK0_TEF1_XR_TPI1_XDH_PDC1_XK_FBA1_TAL1_PDC1tpPDC1_ScTKL1_RPS19b_ScRPE1_RPS19a_ScRKI1_TPI1_CiGXF1_ENO2 (alternative name pYPK0_8)\"\n",
-    "pw.stamp()"
+    "pw.cseguid()"
    ]
   },
   {
@@ -487,73 +458,38 @@
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/bjorn/anaconda3/envs/bjorn37/lib/python3.7/site-packages/Bio/SeqIO/InsdcIO.py:464: BiopythonWarning: Annotation 'pYPK0_TEF1_XR_TPI1_XDH_PDC1_XK_FBA1_TAL1_PDC1tpPDC1_ScTKL1_RPS19b_ScRPE1_RPS19a_ScRKI1_TPI1_CiGXF1_ENO2' too long\n",
-      "  warnings.warn(\"Annotation %r too long\" % text, BiopythonWarning)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<font face=monospace><a href='pMEC1139.gb' target='_blank'>pMEC1139.gb</a></font><br>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "pw.write(\"pMEC1139.gb\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
-    "### [DOWNLOAD](pMEC1138.gb)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "from pydna.all import *\n",
-    "reloaded =read(\"pMEC1139.gb\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [
-    {
      "data": {
       "text/plain": [
-       "rjjimx-cVzquS3V5BPVMOWPSwAI"
+       "cSEGUID_rjjimx-cVzquS3V5BPVMOWPSwAI"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "reloaded.cseguid()"
+    "pw.name = \"pMEC1138\"\n",
+    "pw.description=\"pYPK0_TEF1_XR_TPI1_XDH_PDC1_XK_FBA1_TAL1_PDC1tpPDC1_ScTKL1_RPS19b_ScRPE1_RPS19a_ScRKI1_TPI1_CiGXF1_ENO2 (alternative name pYPK0_8)\"\n",
+    "pw.stamp()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import textwrap"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pw.description = \"\\n\".join( textwrap.wrap( pw.description, 40) )"
    ]
   },
   {
@@ -567,17 +503,16 @@
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "22594"
+      "text/html": [
+       "<font face=monospace><a href='pMEC1139.gb' target='_blank'>pMEC1139.gb</a></font><br>"
       ]
      },
-     "execution_count": 23,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "len(reloaded)"
+    "pw.write(\"pMEC1139.gb\")"
    ]
   }
  ],
