--- a/notebooks/pMEC1030.ipynb
+++ b/notebooks/pMEC1030.ipynb
@@ -24,20 +24,20 @@
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/bjorn/anaconda3/envs/bjorn37/lib/python3.7/site-packages/IPython/core/display.py:689: UserWarning: Consider using IPython.display.IFrame instead\n",
-      "  warnings.warn(\"Consider using IPython.display.IFrame instead\")\n"
-     ]
-    },
-    {
      "data": {
       "text/html": [
-       "<iframe src=http://www.ncbi.nlm.nih.gov/pubmed?LinkName=nuccore_pubmed&from_uid=84570488 width=100% height=250></iframe>"
+       "\n",
+       "        <iframe\n",
+       "            width=\"100%\"\n",
+       "            height=\"250\"\n",
+       "            src=\"http://www.ncbi.nlm.nih.gov/pubmed?LinkName=nuccore_pubmed&from_uid=84570488\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "        ></iframe>\n",
+       "        "
       ],
       "text/plain": [
-       "<IPython.core.display.HTML object>"
+       "<IPython.lib.display.IFrame at 0x7fca41f676d8>"
       ]
      },
      "execution_count": 1,
@@ -46,8 +46,8 @@
     }
    ],
    "source": [
-    "from IPython.display import HTML\n",
-    "HTML('<iframe src=http://www.ncbi.nlm.nih.gov/pubmed?LinkName=nuccore_pubmed&from_uid=84570488 width=100% height=250></iframe>')"
+    "from IPython.display import IFrame\n",
+    "IFrame('http://www.ncbi.nlm.nih.gov/pubmed?LinkName=nuccore_pubmed&from_uid=84570488', width='100%', height=250)"
    ]
   },
   {
