--- a/notebooks/pMEC1042.ipynb
+++ b/notebooks/pMEC1042.ipynb
@@ -56,20 +56,20 @@
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/bjorn/anaconda3/envs/bjorn37/lib/python3.7/site-packages/IPython/core/display.py:689: UserWarning: Consider using IPython.display.IFrame instead\n",
-      "  warnings.warn(\"Consider using IPython.display.IFrame instead\")\n"
-     ]
-    },
-    {
      "data": {
       "text/html": [
-       "<iframe src=http://www.sciencedirect.com/science/article/pii/0378111995000377 width=100% height=350></iframe>"
+       "\n",
+       "        <iframe\n",
+       "            width=\"100%\"\n",
+       "            height=\"250\"\n",
+       "            src=\"http://www.sciencedirect.com/science/article/pii/0378111995000377\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "        ></iframe>\n",
+       "        "
       ],
       "text/plain": [
-       "<IPython.core.display.HTML object>"
+       "<IPython.lib.display.IFrame at 0x7f07e87f1710>"
       ]
      },
      "execution_count": 3,
@@ -78,8 +78,8 @@
     }
    ],
    "source": [
-    "from IPython.display import HTML\n",
-    "HTML('<iframe src=http://www.sciencedirect.com/science/article/pii/0378111995000377 width=100% height=350></iframe>')"
+    "from IPython.display import IFrame\n",
+    "IFrame('http://www.sciencedirect.com/science/article/pii/0378111995000377', width='100%', height=250)"
    ]
   },
   {
