--- a/notebooks/pYPK0_PDC1_ScTKL1_RPS19b.ipynb
+++ b/notebooks/pYPK0_PDC1_ScTKL1_RPS19b.ipynb
@@ -88,20 +88,20 @@
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/bjorn/anaconda3/envs/bjorn37/lib/python3.7/site-packages/IPython/core/display.py:689: UserWarning: Consider using IPython.display.IFrame instead\n",
-      "  warnings.warn(\"Consider using IPython.display.IFrame instead\")\n"
-     ]
-    },
-    {
      "data": {
       "text/html": [
-       "<iframe src=http://www.ncbi.nlm.nih.gov/pubmed/9169875 width=100% height=250></iframe>"
+       "\n",
+       "        <iframe\n",
+       "            width=\"100%\"\n",
+       "            height=\"250\"\n",
+       "            src=\"http://www.ncbi.nlm.nih.gov/pubmed/9169875\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "        ></iframe>\n",
+       "        "
       ],
       "text/plain": [
-       "<IPython.core.display.HTML object>"
+       "<IPython.lib.display.IFrame at 0x7fecf55855c0>"
       ]
      },
      "execution_count": 6,
@@ -110,8 +110,8 @@
     }
    ],
    "source": [
-    "from IPython.display import HTML\n",
-    "HTML('<iframe src=http://www.ncbi.nlm.nih.gov/pubmed/9169875 width=100% height=250></iframe>')"
+    "from IPython.display import IFrame\n",
+    "IFrame('http://www.ncbi.nlm.nih.gov/pubmed/9169875', width='100%', height=250)"
    ]
   },
   {
@@ -606,7 +606,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
