--- a/notebooks/pMEC1030.ipynb
+++ b/notebooks/pMEC1030.ipynb
@@ -37,7 +37,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7fca41f676d8>"
+       "<IPython.lib.display.IFrame at 0x7f02092656a0>"
       ]
      },
      "execution_count": 1,
@@ -46,6 +46,7 @@
     }
    ],
    "source": [
+    "# NBVAL_IGNORE_OUTPUT\n",
     "from IPython.display import IFrame\n",
     "IFrame('http://www.ncbi.nlm.nih.gov/pubmed?LinkName=nuccore_pubmed&from_uid=84570488', width='100%', height=250)"
    ]
