--- a/notebooks/pMEC1042.ipynb
+++ b/notebooks/pMEC1042.ipynb
@@ -69,7 +69,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f07e87f1710>"
+       "<IPython.lib.display.IFrame at 0x7fe854141390>"
       ]
      },
      "execution_count": 3,
@@ -78,6 +78,7 @@
     }
    ],
    "source": [
+    "# NBVAL_IGNORE_OUTPUT\n",
     "from IPython.display import IFrame\n",
     "IFrame('http://www.sciencedirect.com/science/article/pii/0378111995000377', width='100%', height=250)"
    ]
