--- a/notebooks/pYPK0_PDC1_ScTKL1_RPS19b.ipynb
+++ b/notebooks/pYPK0_PDC1_ScTKL1_RPS19b.ipynb
@@ -101,7 +101,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7fecf55855c0>"
+       "<IPython.lib.display.IFrame at 0x7f334a41c588>"
       ]
      },
      "execution_count": 6,
@@ -110,6 +110,7 @@
     }
    ],
    "source": [
+    "# NBVAL_IGNORE_OUTPUT\n",
     "from IPython.display import IFrame\n",
     "IFrame('http://www.ncbi.nlm.nih.gov/pubmed/9169875', width='100%', height=250)"
    ]
