--- a/notebooks/pYPK0_PGI1_ScXKS1_FBA1.ipynb
+++ b/notebooks/pYPK0_PGI1_ScXKS1_FBA1.ipynb
@@ -101,7 +101,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f75144aa6d8>"
+       "<IPython.lib.display.IFrame at 0x7ff509fa47b8>"
       ]
      },
      "execution_count": 6,
@@ -110,6 +110,7 @@
     }
    ],
    "source": [
+    "# NBVAL_IGNORE_OUTPUT\n",
     "from IPython.display import IFrame\n",
     "IFrame('http://www.ncbi.nlm.nih.gov/pubmed/9169869', width='100%', height=250)"
    ]
