--- a/notebooks/pYPK0_TDH3_PsXYL2_PGI1.ipynb
+++ b/notebooks/pYPK0_TDH3_PsXYL2_PGI1.ipynb
@@ -101,7 +101,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7fd9f3e05f28>"
+       "<IPython.lib.display.IFrame at 0x7f06d2c794a8>"
       ]
      },
      "execution_count": 6,
@@ -110,6 +110,7 @@
     }
    ],
    "source": [
+    "# NBVAL_IGNORE_OUTPUT\n",
     "from IPython.display import IFrame\n",
     "IFrame('http://google.com/patents/EP0450430A2?cl=es', width='100%', height=250)"
    ]
