--- a/notebooks/pYPK0_TEF1_PsXYL1_N272D_TDH3.ipynb
+++ b/notebooks/pYPK0_TEF1_PsXYL1_N272D_TDH3.ipynb
@@ -97,7 +97,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7fca84997b70>"
+       "<IPython.lib.display.IFrame at 0x7f63672a1a90>"
       ]
      },
      "execution_count": 4,
@@ -106,6 +106,7 @@
     }
    ],
    "source": [
+    "# NBVAL_IGNORE_OUTPUT\n",
     "from IPython.display import IFrame\n",
     "IFrame('http://www.ncbi.nlm.nih.gov/pmc/articles/PMC2988607', width='100%', height=250)"
    ]
