--- a/notebooks/pYPKa.ipynb
+++ b/notebooks/pYPKa.ipynb
@@ -29,7 +29,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f378c509710>"
+       "<IPython.lib.display.IFrame at 0x7fc05059e710>"
       ]
      },
      "execution_count": 1,
@@ -38,6 +38,7 @@
     }
    ],
    "source": [
+    "# NBVAL_IGNORE_OUTPUT\n",
     "from IPython.display import IFrame\n",
     "IFrame('http://www.ncbi.nlm.nih.gov/pubmed/9514792', width='100%', height=250)"
    ]
