--- a/notebooks/pYPK0_FBA1_ScTAL1_PDC1.ipynb
+++ b/notebooks/pYPK0_FBA1_ScTAL1_PDC1.ipynb
@@ -102,7 +102,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f75b4cee668>"
+       "<IPython.lib.display.IFrame at 0x7f6c85b70f28>"
       ]
      },
      "execution_count": 6,
@@ -111,6 +111,7 @@
     }
    ],
    "source": [
+    "# NBVAL_IGNORE_OUTPUT\n",
     "from IPython.display import IFrame\n",
     "IFrame('http://www.ncbi.nlm.nih.gov/pubmed/9169869', width='100%', height=250)"
    ]
