--- a/notebooks/pYPK0_TEF1_PsXYL1_TDH3.ipynb
+++ b/notebooks/pYPK0_TEF1_PsXYL1_TDH3.ipynb
@@ -102,7 +102,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f0bb748d550>"
+       "<IPython.lib.display.IFrame at 0x7f72cce0af60>"
       ]
      },
      "execution_count": 6,
@@ -111,6 +111,7 @@
     }
    ],
    "source": [
+    "# NBVAL_IGNORE_OUTPUT\n",
     "from IPython.display import IFrame\n",
     "IFrame('http://www.ncbi.nlm.nih.gov/pubmed/1756986', width='100%', height=250)"
    ]
