--- a/notebooks/pYPK0_TPI1_CiGXF1_ENO2.ipynb
+++ b/notebooks/pYPK0_TPI1_CiGXF1_ENO2.ipynb
@@ -101,7 +101,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7fe7e9a024a8>"
+       "<IPython.lib.display.IFrame at 0x7f9784de3390>"
       ]
      },
      "execution_count": 6,
@@ -110,6 +110,7 @@
     }
    ],
    "source": [
+    "# NBVAL_IGNORE_OUTPUT\n",
     "from IPython.display import IFrame\n",
     "IFrame('http://www.ncbi.nlm.nih.gov/pubmed/16402921', width='100%', height=250)"
    ]
