added 1123 to instructions

--- a/notebooks/pYPKa_Z_RPS19a.ipynb
+++ b/notebooks/pYPKa_Z_RPS19a.ipynb
@@ -19,9 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from pydna.all import *"
@@ -37,9 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "pYPKa =read(\"pYPKa.gb\")"
@@ -115,9 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from Bio.Restriction import ZraI"
@@ -133,9 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "pYPKa_ZraI = pYPKa.linearize(ZraI)"
@@ -154,9 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "gb =Genbank(\"bjornjobb@gmail.com\")"
@@ -172,9 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "template = gb.nucleotide(\"BK006948.2 REGION: complement(92851..93394)\")"
@@ -329,9 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "plasmid = (pYPKa_ZraI + insert).looped()"
@@ -347,9 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "pYPKa_Z_RPS19a = plasmid.synced(pYPKa)"
@@ -414,13 +398,11 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "pYPKa_Z_RPS19a.name = \"pYPKa_Z_RPS19atp\"\n",
-    "pYPKa_Z_RPS19a.description = \"pYPKa_Z_RPS19atp\""
+    "pYPKa_Z_RPS19a.name = \"pYPKa_Z_RPS19a\"\n",
+    "pYPKa_Z_RPS19a.description = \"pYPKa_Z_RPS19a\""
    ]
   },
   {
@@ -497,9 +479,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:bjorn36]",
+   "display_name": "Python [conda env:bjorn37]",
    "language": "python",
-   "name": "conda-env-bjorn36-py"
+   "name": "conda-env-bjorn37-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -511,9 +493,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
