--- a/notebooks/ypk_std_primers.ipynb
+++ b/notebooks/ypk_std_primers.ipynb
@@ -26,7 +26,10 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
@@ -39,29 +42,34 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
-    "p567,p577,p468,p467,p568,p578,p775,p778 = parse_primers(''' >567_pCAPsAjiIF (23-mer)\n",
-    "                                                            GTcggctgcaggtcactagtgag\n",
-    "                                                            >577_crp585-557 (29-mer)\n",
-    "                                                            gttctgatcctcgagcatcttaagaattc\n",
+    "p567,p577,p468,p467,p568,p578,p775,p778,p1123 = parse_primers(''' >567_pCAPsAjiIF (23-mer)\n",
+    "                                                                  GTcggctgcaggtcactagtgag\n",
+    "                                                                  >577_crp585-557 (29-mer)\n",
+    "                                                                  gttctgatcctcgagcatcttaagaattc\n",
     "\n",
-    "                                                            >468_pCAPs_release_fw (25-mer)\n",
-    "                                                            gtcgaggaacgccaggttgcccact\n",
-    "                                                            >467_pCAPs_release_re (31-mer) \n",
-    "                                                            ATTTAAatcctgatgcgtttgtctgcacaga\n",
+    "                                                                  >468_pCAPs_release_fw (25-mer)\n",
+    "                                                                  gtcgaggaacgccaggttgcccact\n",
+    "                                                                  >467_pCAPs_release_re (31-mer) \n",
+    "                                                                  ATTTAAatcctgatgcgtttgtctgcacaga\n",
     "\n",
-    "                                                            >568_pCAPsAjiIR (22-mer) \n",
-    "                                                            GTGCcatctgtgcagacaaacg\n",
-    "                                                            >578_crp42-70 (29-mer)\n",
-    "                                                            gttcttgtctcattgccacattcataagt\n",
+    "                                                                  >568_pCAPsAjiIR (22-mer) \n",
+    "                                                                  GTGCcatctgtgcagacaaacg\n",
+    "                                                                  >578_crp42-70 (29-mer)\n",
+    "                                                                  gttcttgtctcattgccacattcataagt\n",
     "\n",
-    "                                                            >775_tp_ZraI_fwd (18-mer)\n",
-    "                                                            gcggccgctgacTTAAAT\n",
-    "                                                            >778_tp_Eco32I_rev (20-mer)\n",
-    "                                                            ggtaaatccggatTAATTAA''')\n",
+    "                                                                  >775_tp_ZraI_fwd (18-mer)\n",
+    "                                                                  gcggccgctgacTTAAAT\n",
+    "                                                                  >778_tp_Eco32I_rev (20-mer)\n",
+    "                                                                  ggtaaatccggatTAATTAA\n",
+    "                                                                  >1123_New775\n",
+    "                                                                  gtgcaatgcggccgctGAC''')\n",
     "\n",
     "# The primers 167 and 166 were used instead of 577 and 578 for some constructions\n",
     "\n",
@@ -118,6 +126,7 @@
     "    467 ATTTAAatcctgatgcgtttgtctgcacaga\n",
     "    777 acgcatcaggatTTAAAT\n",
     "    778 ggtaaatccggatTAATTAA\n",
+    "    1123 gtgcaatgcggccgctGAC\n",
     "    512 ttcgccaattgattcaggtaaatccggat\n",
     "    578 gttcttgtctcattgccacattcataagt\n",
     "    166 CTGTGAAGTGGCTGAAATTTCGTA\n",
@@ -125,8 +134,7 @@
     "    342 CCTTTTTACGGTTCCTGGCCT\n",
     "    \n",
     "    \n",
-    "    \n",
-    "\n",
+    "   \n",
     "\n",
     "### Background\n",
     "\n",
@@ -236,7 +244,7 @@
     "Tailed primers can be used to amplify genes for recombination between any two promoters and terminators. The primer tails need to be designed to promote recombination between the promoter and terminator:\n",
     "\n",
     "     >Gene_YPK_rec_fwd\n",
-    "     tgcccactttctcactagtgacctgcagccgac-A-ATG...\n",
+    "          actttctcactagtgacctgcagccgac-A-ATG...\n",
     "                                         ---\n",
     "                                         sta\n",
     "                                         rtc\n",
@@ -245,7 +253,7 @@
     "     <--------------  33 nt -------->\n",
     "\n",
     "     >Gene_YPK_rec_rev\n",
-    "     AAatcctgatgcgtttgtctgcacagatggCAC...\n",
+    "       atcctgatgcgtttgtctgcacagatggCAC...\n",
     "                                      ---\n",
     "                                      sto\n",
     "                                      pco\n",
@@ -291,21 +299,14 @@
     "\n",
     "The entire single gene expression cassette (promoter-gene-terminator) can be cut out from the pYPKpw vector using [NotI](http://rebase.neb.com/rebase/enz/NotI.html) on the plasmid backbone and the [PacI](http://rebase.neb.com/rebase/enz/PacI.html) generated by the tp primer tails."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:bjorn37]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-bjorn37-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -317,9 +318,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
